# OpenSuturingSkillsChallenge

./: Dockerfile  README.md  pyproject.toml
src/: Process_SkillEval.sh  coords.py  inf_CNN.py  inf_LGBM.py  inference_mp4.py  postprocess.py  utils.py
train/: 1DCNN.py  LGBM.ipynb
