[tool.poetry]
name = "oss"
version = "0.1.0"
description = ""
authors = ["shunsuke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
polars = "^0.20.31"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
lightning = "^2.3.3"
imageio-ffmpeg = "^0.5.1"
scikit-video = "^1.1.11"
seaborn = "^0.13.2"
psutil = "^6.0.0"
opencv-python = "^4.10.0.84"
catboost = "^1.2.5"
scikit-learn = "^1.5.1"
pyarrow = "^17.0.0"
albumentations = "^1.4.11"
segmentation-models-pytorch = "^0.3.3"
huggingface-hub = "^0.24.0"
transformers = "^4.42.4"
av = "^12.3.0"
torch = "^2.3.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
wandb = "^0.17.5"
volumentations-3d = "^1.0.4"
monai = "^1.3.2"
mmdet = "^3.3.0"
openmim = "^0.3.9"
importlib-metadata = "^8.2.0"
lightgbm = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
